# AlphaForge

./: .gitignore  404.html  ALPHAFORGE_USAGE_SUMMARY.md  AUTHORS.md  CHANGELOG.md  Cargo.toml  GITHUB_REPOSITORY_GUIDE.md  HOW_TO_USE_ALPHAFORGE.md  MANIFEST.in  PHASE2_COMPLETE.md  PHASE_3_SUMMARY.md  PHASE_4_COMPLETION_REPORT.md  PHASE_5_COMPLETION_REPORT.md  PHASE_5_PRODUCTION_INFRASTRUCTURE.md  PYPI_PUBLISHING_GUIDE.md  README.md  benchmark.py  build.py  cache_hitrate_analysis.py  direct_cache_test.py  index.html  live_execution_engine_demo.py  mkdocs.yml  publish_to_pypi.py  pyproject.toml  rust_benchmark.py  setup.py  sitemap.xml  strategy_framework_complete_demo.py  test_cache.py  test_data_engine.py  test_rust_cache.py
.github/: copilot-instructions.md
alphaforge/: __init__.py
alphaforge/core/: __init__.py  cache.py  component.py  config.py  exceptions.py  logging.py  message.py  time.py  uuid.py
alphaforge/model/: __init__.py  data.py  enums.py  events.py  identifiers.py  orders.py
alphaforge_pyo3/: __init__.py  core.py
api/python-api/: index.html
architecture/overview/: index.html
crates/core/: Cargo.toml
crates/core/src/: cache.rs  clock.rs  data.rs  data_engine.rs  error.rs  execution_engine.rs  generic_cache.rs  identifiers.rs  lib.rs  message.rs  message_bus.rs  strategy_engine.rs  time.rs  uuid.rs
crates/model/: Cargo.toml
crates/model/src/: enums.rs  identifiers.rs  lib.rs  orderbook.rs
crates/pyo3/: Cargo.toml
crates/pyo3/src/: data_engine.rs  execution_engine.rs  execution_engine_old.rs  lib.rs  strategy_engine.rs
docs/: index.md
docs/api/: python-api.md
docs/architecture/: overview.md
docs/examples/: basic-strategy.md
docs/getting-started/: quick-start.md
docs/javascripts/: mathjax.js
docs/reference/: benchmarks.md  phase-reports.md
docs/stylesheets/: extra.css
examples/: strategy_framework_demo.py
examples/basic-strategy/: index.html
getting-started/quick-start/: index.html
javascripts/: mathjax.js
python/alphaforge/: __init__.py
python/alphaforge/core/: __init__.py
reference/benchmarks/: index.html
reference/phase-reports/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: test_basic.py
