[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/model", 
    "crates/pyo3",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["AlphaForge Team"]
license = "MIT"
repository = "https://github.com/alphaforge/alphaforge"
homepage = "https://alphaforge.io"
description = "High-performance algorithmic trading platform"
keywords = ["trading", "algorithmic", "finance", "rust", "python"]
categories = ["finance", "algorithms", "api-bindings"]

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
bincode = "1.3"

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module", "chrono"] }

# Networking
tungstenite = "0.23"
tokio-tungstenite = "0.23"
reqwest = { version = "0.12", features = ["json", "stream"] }

# Data structures
indexmap = { version = "2.6", features = ["serde"] }
dashmap = "6.1"
crossbeam = "0.8"

# Numerical computing
rust_decimal = { version = "1.35", features = ["serde", "maths"] }
num-traits = "0.2"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Performance optimization
once_cell = "1.19"
parking_lot = "0.12"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
tokio-test = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
debug = true
opt-level = 0

[profile.bench]
debug = true
lto = true
codegen-units = 1
