[package]
name = "alphaforge-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core data structures and utilities for AlphaForge"

[lib]
name = "alphaforge_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = "0.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
bincode = { workspace = true }

# Data structures
indexmap = { workspace = true }
dashmap = { workspace = true }
ahash = "0.8"

# Numerical computing
rust_decimal = { workspace = true }
num-traits = { workspace = true }

# Time handling  
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Logging
tracing = { workspace = true }

# Performance
once_cell = { workspace = true }
parking_lot = { workspace = true }

# Python bindings (optional)
pyo3 = { workspace = true, optional = true }

[features]
default = []
python = ["pyo3"]
extension-module = ["pyo3/extension-module"]
high-precision = []

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
