[package]
name = "alphaforge-model"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Domain model and data structures for AlphaForge"

[lib]
name = "alphaforge_model"
crate-type = ["cdylib", "rlib"]

[dependencies]
alphaforge-core = { path = "../core" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
bincode = { workspace = true }

# Data structures
indexmap = { workspace = true }
dashmap = { workspace = true }

# Numerical computing
rust_decimal = { workspace = true }
num-traits = { workspace = true }

# Time handling
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
thiserror = { workspace = true }

# Performance
once_cell = { workspace = true }
parking_lot = { workspace = true }

# Python bindings (optional)
pyo3 = { workspace = true, optional = true }

[features]
default = []
python = ["pyo3", "alphaforge-core/python"]
extension-module = ["pyo3/extension-module"]
high-precision = ["alphaforge-core/high-precision"]

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
