[package]
name = "alphaforge-pyo3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for AlphaForge"

[lib]
name = "alphaforge_pyo3"
crate-type = ["cdylib"]

# Python extension configuration
[tool.maturin]
python-source = "python"
module-name = "alphaforge.core.rust"

[dependencies]
alphaforge-core = { path = "../core", features = ["python"] }
alphaforge-model = { path = "../model", features = ["python"] }

# Python bindings
pyo3 = { workspace = true, features = ["extension-module", "chrono"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
